--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.3"
   },
   "private": true
 }
