--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-radial-gradient": "^1.1.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
